background color change and footer edit

--- a/hw.html
+++ b/hw.html
@@ -35,13 +35,8 @@
     <section class="hero"> 
     </section>
           
-<!-- HERO/JUMBOTRON-->
-<section></section>
 
-<!--"Home" section // make home title opaque ? -->
-<section>
-    <h2>Home</h2>
-</section>
+<!--"Home" section // add later -->
 
 <!-- "About Me" section -->
 <Section>
@@ -65,6 +60,8 @@
   <!-- "Portfolio" section need to add links -->
   <section>
     <h2>Portfolio</h2>
+    
+
   </section>
   
   <!-- "contact me" section -->
