background color change

--- a/hw.html
+++ b/hw.html
@@ -60,11 +60,11 @@
   <!-- "Portfolio" section need to add links -->
   <section>
     <h2>Portfolio</h2>
-    
+
 
   </section>
   
-  <!-- "contact me" section -->
+  <!-- "contact me" section add-->
   <section>
       <h2>Contact Me</h2>
   <section class="hero2"> 
