added projects and added contact me icons

--- a/hw.html
+++ b/hw.html
@@ -60,8 +60,28 @@
   <!-- "Portfolio" section need to add links -->
   <section>
     <h2>Portfolio</h2>
+    <h3>Run-Buddy</h3>
+        <img src="./assests/pictures/project pictures/Screen Shot 2021-02-14 at 5.37.25 PM.png"> alt="run buddy website"
+        <p>
+        <a href="https://nmchristianson.github.io/Run-buddy/" target="runbuddy">Run Buddy</a>
+        <p>
+        <img src="./assests/pictures/project pictures/Screen Shot 2021-02-14 at 5.37.25 PM.png"> alt="run buddy website"
+        <p>
+        <a href="https://nmchristianson.github.io/Run-buddy/" target="runbuddy">Run Buddy</a>
+        <p>
+        <img src="./assests/pictures/project pictures/Screen Shot 2021-02-14 at 5.37.25 PM.png"> alt="run buddy website"
+        <p>
+        <a href="https://nmchristianson.github.io/Run-buddy/" target="runbuddy">Run Buddy</a>
+        <p>    
+        <img src="./assests/pictures/project pictures/Screen Shot 2021-02-14 at 5.37.25 PM.png"> alt="run buddy website"
+        <p>
+        <a href="https://nmchristianson.github.io/Run-buddy/" target="runbuddy">Run Buddy</a>
+        <p>
+        <img src="./assests/pictures/project pictures/Screen Shot 2021-02-14 at 5.37.25 PM.png"> alt="run buddy website"
+        <p>
+        <a href="https://nmchristianson.github.io/Run-buddy/" target="runbuddy">Run Buddy</a>
 
-
+        
   </section>
   
   <!-- "contact me" section add-->
@@ -83,7 +103,13 @@
           </button> 
     </form>
     </div>
+
+    <a href="https://www.linkedin.com/in/nichole-christianson/"><img src="./assests/pictures/icons/linked.png" alt="linkedin icon" style="width:42px;height:42px;"></a>
+    <a href="mailto:nmchristianson@gmail.com"><img src="./assests/pictures/icons/email.png" alt="envelope icon" style="width:42px;height:42px;"></a>
+    <a href="https://www.instagram.com/paperbackwriterstudio/"><img src="./assests/pictures/icons/instagram.png" alt="instagram" style="width:42px;height:42px;"></a>
+
   </section>
+
   
 <!-- footer-->
 <footer> 
