renamed css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title> Nichole Christianson Portfolio</title>
-    <link rel="stylesheet" href="./assests/css/hw.css"
+    <link rel="stylesheet" href="./assests/css/style.css"
 
 </head>
 
