--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <section class="hero"> 
+        <img src="./assests/pictures/DSC08734.JPG">
     </section>
           
 
